--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -15,6 +15,8 @@
   </div>
 </div>
 
+<span> johnrem</span>
+
 <div class="container-md">
   <table class="table table-success table-striped">
     <thead>
