--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -16,6 +16,9 @@
 </div>
 
 <span> johnrem</span>
+<span> johnrem</span>
+<span> johnrem</span>
+<span> johnrem</span>
 
 <div class="container-md">
   <table class="table table-success table-striped">
