--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -1,27 +1,53 @@
 <div class="container-md">
-  <div class="row g-2">
-    <div class="col-md">
+  <div class="row g-3">
+    <div class="col-md-6">
       <div class="form-floating">
-        <input type="text" class="form-control" id="fName" placeholder="Your Name" [(ngModel)]="MyProfile.first_name">
-        <label for="fName">Email address</label>
+        <input type="text" class="form-control" id="fName" placeholder="Your Name" [(ngModel)]="MyProfile.first_name" />
+        <label for="fName">First Name</label>
       </div>
     </div>
-    <div class="col-md">
+    <div class="col-md-6">
       <div class="form-floating">
-        <input type="text" class="form-control" id="lName" placeholder="Your Surname" [(ngModel)]="MyProfile.last_name">
-        <label for="lName">Password</label>
+        <input type="text" class="form-control" id="lName" placeholder="Your Surname"
+          [(ngModel)]="MyProfile.last_name" />
+        <label for="lName">Last Name</label>
+      </div>
+    </div>
+    <!-- <div class="col-12">
+      <div class="form-floating">
+        <input type="text" class="form-control" id="address" placeholder="Blk 5 Lot 18 Teresa Rizal"
+          [(ngModel)]="MyProfile.adress" />
+        <label for="address">Address</label>
+      </div>
+    </div>
+    <div class="col-12">
+      <div class="form-floating">
+        <input type="text" class="form-control" id="mobile" placeholder="(Example: 09178889900)"
+          [(ngModel)]="MyProfile.mobile" />
+        <label for="mobile">Mobile</label>
+      </div>
+    </div> -->
+    <div class="col-md-6">
+      <div class="form-floating">
+        <select id="inputState" class="form-select" [(ngModel)]="this.MyProfile.gender_id" src="">
+          <option *ngFor="let gen of gender" [value]="gen.id">{{ gen.gender }}</option>
+        </select>
+        <label for="address">Gender</label>
       </div>
     </div>
   </div>
 </div>
 
-<div class="container-md">
+<br>
+
+<div class="container md-3">
   <table class="table table-success table-striped">
     <thead>
       <tr>
         <th scope="col">ID</th>
         <th scope="col">First Name</th>
         <th scope="col">Last Name</th>
+        <th scope="col">Gender</th>
         <th scope="col">ACTION</th>
       </tr>
     </thead>
@@ -30,19 +56,23 @@
         <td scope="row">{{ profile.id }}</td>
         <td>{{ profile.first_name }}</td>
         <td>{{ profile.last_name }}</td>
+        <td>{{ profile.gender }}</td>
         <td class="d-grid gap-2 d-md-block">
-            <button type="button" class="btn btn-outline-success d-grid gap-2 d-md-block" (click)="open(content); SelectedProfile=profile">Edit</button> 
-            <button type="button" class="btn btn-outline-danger d-grid gap-2 d-md-block" (click)="DeleteProfile(profile.id)">DELETE</button>
+          <button type="button" class="btn btn-outline-success d-grid gap-2 d-md-block"
+            (click)="open(content); GenderProfile = gender">
+            Edit
+          </button>   
+          <button type="button" class="btn btn-outline-danger d-grid gap-2 d-md-block"
+            (click)="DeleteProfile(profile.id)">
+            DELETE
+          </button>
         </td>
-        
       </tr>
     </tbody>
   </table>
 
   <button class="btn btn-primary" (click)="SaveProfile()">Save</button>
 </div>
-
-
 
 <!-- Modal -->
 <ng-template #content let-modal>
@@ -54,22 +84,30 @@
   </div>
   <div class="modal-body">
     <div class="form-group">
-
       <div class="mb-3">
         <label for="firstName" class="form-label">First Name: </label>
         <input id="firstName" class="form-control" type="text" placeholder="First Name"
-          [(ngModel)]="SelectedProfile.first_name">
+          [(ngModel)]="SelectedProfile.first_name" />
       </div>
       <div class="mb-3">
         <label for="lastName" class="form-label">Last Name: </label>
         <input id="lastName" class="form-control" type="text" placeholder="Last Name"
-          [(ngModel)]="SelectedProfile.last_name">
+          [(ngModel)]="SelectedProfile.last_name" />
       </div>
-
+      <div class="form-floating">
+        <select id="inputState" class="form-select" [(ngModel)]="GenderProfile.gender">
+          <option *ngFor="let gen of gender" [value]="gen.id">{{ gen.gender }}</option>
+        </select>
+        <label for="address">Gender</label>
+      </div>
     </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-danger" (click)="modal.close('Cancel')">Cancel</button>
-    <button type="button" class="btn btn-primary" (click)="UpdateProfile()">Update</button>
+    <button type="button" class="btn btn-danger" (click)="modal.close('Cancel')">
+      Cancel
+    </button>
+    <button type="button" class="btn btn-primary" (click)="UpdateProfile()">
+      Update
+    </button>
   </div>
 </ng-template>
