--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,4 @@
-// footer {
-//     background: #eee;
-//     padding: 20px;
-//     text-align: center;
-// }
+.full {
+  height: 50vh;
+  width: 50vw;
+}
